--- a/style.css
+++ b/style.css
@@ -18,6 +18,10 @@
     padding: 10px;
     color: white;
     border-radius: 10px;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-weight: 900;
+    margin-top: 10px;
+    margin-bottom: 15px;
 }
 
 .normal-fruit {
@@ -70,6 +74,52 @@
 }
 
 .score {
-    color: rgb(66, 109, 165);
+    color: rgb(98, 98, 255);
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+
+.config-label {
+    color: rgb(98, 98, 255);
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-weight: 900;
+    display: block;
+    margin-bottom: 5px;
+    margin-top: 8px;
+}
+.config-input {
+    border-color: rgb(150, 119, 91);
+    background-color: black;
+    display: block;
+    color: white;
+    border-radius: 10px;
+    margin-bottom: 20px;
+}
+
+.config-form {
+    border-color: white;
+    border: 1px solid rgb(87, 133, 134);
+    display: inline-block;
+    padding: 10px;
+    margin-top: 20px;
+}
+
+.config-radio-label {
+    color: white;
+    margin-right: 13px;
+    color: rgb(240, 157, 85);
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+
+.config {
+    display: inline-block;
+}
+
+.grid-container {
+    display: inline-block;
+}
+
+.main {
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
 }
