--- a/style.css
+++ b/style.css
@@ -142,3 +142,19 @@
     align-items: center;
     justify-content: space-around;
 }
+
+.reset-config-button {
+    background-color: rgb(252, 45, 9);
+    border-color: rgb(187, 97, 81);
+    padding: 8px;
+    color: white;
+    border-radius: 10px;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-weight: 900;
+    margin-top: 10px;
+    margin-bottom: 15px;
+}
+
+.reset-config-button:hover {
+    background-color: brown;
+}
